--- a/07.Pymysql과MariaDB연동.ipynb
+++ b/07.Pymysql과MariaDB연동.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,13 +19,13 @@
      "output_type": "stream",
      "text": [
       "Name: PyMySQL\n",
-      "Version: 0.10.1\n",
+      "Version: 1.1.2\n",
       "Summary: Pure Python MySQL Driver\n",
-      "Home-page: https://github.com/PyMySQL/PyMySQL/\n",
-      "Author: yutaka.matsubara\n",
-      "Author-email: yutaka.matsubara@gmail.com\n",
-      "License: \"MIT\"\n",
-      "Location: c:\\programdata\\anaconda3\\lib\\site-packages\n",
+      "Home-page: \n",
+      "Author: \n",
+      "Author-email: Inada Naoki <songofacandy@gmail.com>, Yutaka Matsubara <yutaka.matsubara@gmail.com>\n",
+      "License-Expression: MIT\n",
+      "Location: C:\\Users\\wlgh5\\anaconda3\\Lib\\site-packages\n",
       "Requires: \n",
       "Required-by: \n"
      ]
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "'\\nCREATE TABLE product (\\n    id INT UNSIGNED NOT NULL AUTO_INCREMENT,\\n    name VARCHAR(20) NOT NULL,\\n    model_num VARCHAR(10) NOT NULL,\\n    model_type VARCHAR(10) NOT NULL,\\n    PRIMARY KEY(id)\\n);\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymysql\n",
     "\n",
-    "db = pymysql.connect(host='localhost', port=3307, db='python_db',\\\n",
-    "                    user='python',passwd='python',charset='utf8')\n",
+    "db = pymysql.connect(host='localhost', port=3306, database='python_db',\\\n",
+    "                    user='python',password='python',charset='utf8')\n",
     "cursor = db.cursor()\n",
     "cursor.execute(sql)\n",
     "db.commit()"
@@ -81,7 +81,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('show tables')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -90,19 +110,18 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursor.execute('show tables')\n",
     "cursor.execute('drop table product')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,24 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "insert into product (name,model_num,model_type) values (%s, %s, %s)\n",
-      "10\n"
+      "(1050, \"Table 'product' already exists\")\n"
      ]
     }
    ],
@@ -136,8 +145,8 @@
     "import pymysql\n",
     "\n",
     "#db와 연결\n",
-    "db = pymysql.connect(host='localhost', port=3307, db='python_db',\\\n",
-    "                    user='python',passwd='python',charset='utf8')\n",
+    "db = pymysql.connect(host='localhost', port=3306, database='python_db',\\\n",
+    "                    user='python',password='python',charset='utf8')\n",
     "\n",
     "try:\n",
     "    #cursor 생성하고 cursor가 open되어 있는 query문을 여러개 실행\n",
@@ -163,6 +172,7 @@
     "        print(cursor.lastrowid)\n",
     "except Exception as exp:\n",
     "    print(exp)\n",
+    "    #insert 중 하나라도 실패하면 이전 insert까지 전부 취소 데이터 무결성 유지\n",
     "    db.rollback()\n",
     "finally:\n",
     "    db.close()"
@@ -170,15 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'tuple'> (3, 'S2012', '7700', '핸드폰') S2012\n",
-      "0\n",
+      "<class 'tuple'> (3, 'S2012', '7700', 'Phone') S2012\n",
+      "6\n",
       "<class 'tuple'>\n",
       "1 S2010 7700 핸드폰\n",
       "2 S2011 7700 핸드폰\n",
@@ -198,8 +208,8 @@
    "source": [
     "import pymysql\n",
     "\n",
-    "db = pymysql.connect(host='localhost', port=3306, db='python_db',\\\n",
-    "                    user='python',passwd='python',charset='utf8')\n",
+    "db = pymysql.connect(host='localhost', port=3306, database='python_db',\\\n",
+    "                    user='python',password='python',charset='utf8')\n",
     "\n",
     "try:\n",
     "    #select, update\n",
@@ -232,14 +242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
+      "2\n",
+      "1 S2010 7700 핸드폰\n",
+      "2 S2011 7700 핸드폰\n",
+      "5 S2014 7700 핸드폰\n",
+      "6 S2015 7700 핸드폰\n",
       "7 S2016 7700 Phone\n",
       "8 S2017 7700 Phone\n",
       "9 S2018 7700 Phone\n",
@@ -251,8 +265,8 @@
     "# delete 하고 select all\n",
     "#name 컬럼의 값이 's2014' 와 's2015' 인 행을 삭제하세요 sql의 in 구문을 사용하세요\n",
     "\n",
-    "con = pymysql.connect(host='localhost', port=3306, db='python_db',\\\n",
-    "                    user='python',passwd='python',charset='utf8')\n",
+    "con = pymysql.connect(host='localhost', port=3306, database='python_db',\\\n",
+    "                    user='python',password='python',charset='utf8')\n",
     "\n",
     "#print(type(con), con)\n",
     "\n",
@@ -279,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
