--- a/08.Selenium사용_GitHub로그인.ipynb
+++ b/08.Selenium사용_GitHub로그인.ipynb
@@ -17,48 +17,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: webdriver-manager\n",
-      "Version: 4.0.1\n",
-      "Summary: Library provides the way to automatically manage drivers for different browsers\n",
-      "Home-page: https://github.com/SergeyPirogov/webdriver_manager\n",
-      "Author: Sergey Pirogov\n",
-      "Author-email: automationremarks@gmail.com\n",
-      "License: \n",
-      "Location: c:\\users\\vega2\\anaconda3\\lib\\site-packages\n",
-      "Requires: packaging, python-dotenv, requests\n",
-      "Required-by: \n"
+      "Collecting webdriver-manager\n",
+      "  Downloading webdriver_manager-4.0.2-py2.py3-none-any.whl.metadata (12 kB)\n",
+      "Requirement already satisfied: requests in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from webdriver-manager) (2.32.5)\n",
+      "Requirement already satisfied: python-dotenv in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from webdriver-manager) (1.1.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from webdriver-manager) (25.0)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (3.4.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (3.11)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (2025.11.12)\n",
+      "Downloading webdriver_manager-4.0.2-py2.py3-none-any.whl (27 kB)\n",
+      "Installing collected packages: webdriver-manager\n",
+      "Successfully installed webdriver-manager-4.0.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip show webdriver-manager"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: selenium\n",
-      "Version: 4.19.0\n",
-      "Summary: \n",
-      "Home-page: https://www.selenium.dev\n",
-      "Author: \n",
-      "Author-email: \n",
-      "License: Apache 2.0\n",
-      "Location: c:\\users\\vega2\\anaconda3\\lib\\site-packages\n",
-      "Requires: certifi, trio, trio-websocket, typing_extensions, urllib3\n",
-      "Required-by: \n"
-     ]
-    }
-   ],
-   "source": [
-    "#pip install selenium\n",
-    "!pip show selenium"
+    "%pip install webdriver-manager"
    ]
   },
   {
@@ -67,12 +43,161 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting selenium\n",
+      "  Downloading selenium-4.40.0-py3-none-any.whl.metadata (7.7 kB)\n",
+      "Collecting certifi>=2026.1.4 (from selenium)\n",
+      "  Downloading certifi-2026.1.4-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting trio<1.0,>=0.31.0 (from selenium)\n",
+      "  Downloading trio-0.32.0-py3-none-any.whl.metadata (8.5 kB)\n",
+      "Collecting trio-websocket<1.0,>=0.12.2 (from selenium)\n",
+      "  Downloading trio_websocket-0.12.2-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Collecting trio-typing>=0.10.0 (from selenium)\n",
+      "  Downloading trio_typing-0.10.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting types-certifi>=2021.10.8.3 (from selenium)\n",
+      "  Downloading types_certifi-2021.10.8.3-py3-none-any.whl.metadata (1.4 kB)\n",
+      "Collecting types-urllib3>=1.26.25.14 (from selenium)\n",
+      "  Downloading types_urllib3-1.26.25.14-py3-none-any.whl.metadata (1.7 kB)\n",
+      "Requirement already satisfied: typing_extensions<5.0,>=4.15.0 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from selenium) (4.15.0)\n",
+      "Collecting urllib3<3.0,>=2.6.3 (from urllib3[socks]<3.0,>=2.6.3->selenium)\n",
+      "  Downloading urllib3-2.6.3-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Requirement already satisfied: websocket-client<2.0,>=1.8.0 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from selenium) (1.8.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio<1.0,>=0.31.0->selenium) (25.4.0)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio<1.0,>=0.31.0->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio<1.0,>=0.31.0->selenium) (3.11)\n",
+      "Collecting outcome (from trio<1.0,>=0.31.0->selenium)\n",
+      "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio<1.0,>=0.31.0->selenium) (1.3.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio<1.0,>=0.31.0->selenium) (2.0.0)\n",
+      "Collecting wsproto>=0.14 (from trio-websocket<1.0,>=0.12.2->selenium)\n",
+      "  Downloading wsproto-1.3.2-py3-none-any.whl.metadata (5.2 kB)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from urllib3[socks]<3.0,>=2.6.3->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio<1.0,>=0.31.0->selenium) (2.23)\n",
+      "Requirement already satisfied: mypy-extensions>=0.4.2 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio-typing>=0.10.0->selenium) (1.0.0)\n",
+      "Collecting async-generator (from trio-typing>=0.10.0->selenium)\n",
+      "  Downloading async_generator-1.10-py3-none-any.whl.metadata (4.9 kB)\n",
+      "Requirement already satisfied: packaging in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio-typing>=0.10.0->selenium) (25.0)\n",
+      "Requirement already satisfied: importlib-metadata in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from trio-typing>=0.10.0->selenium) (8.7.0)\n",
+      "Requirement already satisfied: h11<1,>=0.16.0 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket<1.0,>=0.12.2->selenium) (0.16.0)\n",
+      "Requirement already satisfied: zipp>=3.20 in c:\\users\\wlgh5\\anaconda3\\lib\\site-packages (from importlib-metadata->trio-typing>=0.10.0->selenium) (3.23.0)\n",
+      "Downloading selenium-4.40.0-py3-none-any.whl (9.6 MB)\n",
+      "   ---------------------------------------- 0.0/9.6 MB ? eta -:--:--\n",
+      "   -- ------------------------------------- 0.5/9.6 MB 2.2 MB/s eta 0:00:05\n",
+      "   ---- ----------------------------------- 1.0/9.6 MB 2.3 MB/s eta 0:00:04\n",
+      "   ----- ---------------------------------- 1.3/9.6 MB 2.6 MB/s eta 0:00:04\n",
+      "   -------- ------------------------------- 2.1/9.6 MB 2.4 MB/s eta 0:00:04\n",
+      "   --------- ------------------------------ 2.4/9.6 MB 2.4 MB/s eta 0:00:04\n",
+      "   ------------ --------------------------- 2.9/9.6 MB 2.3 MB/s eta 0:00:03\n",
+      "   ------------- -------------------------- 3.1/9.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   ------------- -------------------------- 3.1/9.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   -------------- ------------------------- 3.4/9.6 MB 1.8 MB/s eta 0:00:04\n",
+      "   --------------- ------------------------ 3.7/9.6 MB 1.8 MB/s eta 0:00:04\n",
+      "   ---------------- ----------------------- 3.9/9.6 MB 1.7 MB/s eta 0:00:04\n",
+      "   ----------------- ---------------------- 4.2/9.6 MB 1.7 MB/s eta 0:00:04\n",
+      "   ------------------ --------------------- 4.5/9.6 MB 1.6 MB/s eta 0:00:04\n",
+      "   -------------------- ------------------- 5.0/9.6 MB 1.6 MB/s eta 0:00:03\n",
+      "   --------------------- ------------------ 5.2/9.6 MB 1.6 MB/s eta 0:00:03\n",
+      "   --------------------- ------------------ 5.2/9.6 MB 1.6 MB/s eta 0:00:03\n",
+      "   ---------------------- ----------------- 5.5/9.6 MB 1.5 MB/s eta 0:00:03\n",
+      "   ------------------------ --------------- 5.8/9.6 MB 1.5 MB/s eta 0:00:03\n",
+      "   ------------------------ --------------- 5.8/9.6 MB 1.5 MB/s eta 0:00:03\n",
+      "   ------------------------- -------------- 6.0/9.6 MB 1.4 MB/s eta 0:00:03\n",
+      "   ------------------------- -------------- 6.0/9.6 MB 1.4 MB/s eta 0:00:03\n",
+      "   -------------------------- ------------- 6.3/9.6 MB 1.3 MB/s eta 0:00:03\n",
+      "   -------------------------- ------------- 6.3/9.6 MB 1.3 MB/s eta 0:00:03\n",
+      "   --------------------------- ------------ 6.6/9.6 MB 1.3 MB/s eta 0:00:03\n",
+      "   ---------------------------- ----------- 6.8/9.6 MB 1.3 MB/s eta 0:00:03\n",
+      "   ----------------------------- ---------- 7.1/9.6 MB 1.3 MB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 7.1/9.6 MB 1.3 MB/s eta 0:00:02\n",
+      "   ------------------------------ --------- 7.3/9.6 MB 1.2 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 7.6/9.6 MB 1.2 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 7.6/9.6 MB 1.2 MB/s eta 0:00:02\n",
+      "   -------------------------------- ------- 7.9/9.6 MB 1.2 MB/s eta 0:00:02\n",
+      "   -------------------------------- ------- 7.9/9.6 MB 1.2 MB/s eta 0:00:02\n",
+      "   --------------------------------- ------ 8.1/9.6 MB 1.1 MB/s eta 0:00:02\n",
+      "   --------------------------------- ------ 8.1/9.6 MB 1.1 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 8.4/9.6 MB 1.1 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 8.4/9.6 MB 1.1 MB/s eta 0:00:02\n",
+      "   ------------------------------------ --- 8.7/9.6 MB 1.1 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 8.9/9.6 MB 1.1 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 8.9/9.6 MB 1.1 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 9.2/9.6 MB 1.1 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 9.2/9.6 MB 1.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 9.6/9.6 MB 1.1 MB/s  0:00:08\n",
+      "Downloading trio-0.32.0-py3-none-any.whl (512 kB)\n",
+      "Downloading trio_websocket-0.12.2-py3-none-any.whl (21 kB)\n",
+      "Downloading urllib3-2.6.3-py3-none-any.whl (131 kB)\n",
+      "Downloading certifi-2026.1.4-py3-none-any.whl (152 kB)\n",
+      "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+      "Downloading trio_typing-0.10.0-py3-none-any.whl (42 kB)\n",
+      "Downloading types_certifi-2021.10.8.3-py3-none-any.whl (2.1 kB)\n",
+      "Downloading types_urllib3-1.26.25.14-py3-none-any.whl (15 kB)\n",
+      "Downloading wsproto-1.3.2-py3-none-any.whl (24 kB)\n",
+      "Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: types-urllib3, types-certifi, wsproto, urllib3, outcome, certifi, async-generator, trio, trio-websocket, trio-typing, selenium\n",
+      "\n",
+      "  Attempting uninstall: urllib3\n",
+      "\n",
+      "    Found existing installation: urllib3 2.5.0\n",
+      "\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "    Uninstalling urllib3-2.5.0:\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "      Successfully uninstalled urllib3-2.5.0\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "  Attempting uninstall: certifi\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "    Found existing installation: certifi 2025.11.12\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "    Uninstalling certifi-2025.11.12:\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "      Successfully uninstalled certifi-2025.11.12\n",
+      "   ---------- -----------------------------  3/11 [urllib3]\n",
+      "   --------------------- ------------------  6/11 [async-generator]\n",
+      "   ------------------------- --------------  7/11 [trio]\n",
+      "   ------------------------- --------------  7/11 [trio]\n",
+      "   ------------------------- --------------  7/11 [trio]\n",
+      "   ------------------------- --------------  7/11 [trio]\n",
+      "   ------------------------- --------------  7/11 [trio]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ------------------------------------ --- 10/11 [selenium]\n",
+      "   ---------------------------------------- 11/11 [selenium]\n",
+      "\n",
+      "Successfully installed async-generator-1.10 certifi-2026.1.4 outcome-1.3.0.post0 selenium-4.40.0 trio-0.32.0 trio-typing-0.10.0 trio-websocket-0.12.2 types-certifi-2021.10.8.3 types-urllib3-1.26.25.14 urllib3-2.6.3 wsproto-1.3.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pip install selenium\n",
+    "%pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "'4.19.0'"
+       "'4.40.0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.7\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.8\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.9\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.10\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.11\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.12\")>]\n",
+      "[<selenium.webdriver.remote.webelement.WebElement (session=\"b78a629dcf9485e507716ce76670ff4c\", element=\"f.79453F4B27E5A85BA3A0593F38E1EFD7.d.251EC070DD075B9520588D413DE7BFB3.e.7\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"b78a629dcf9485e507716ce76670ff4c\", element=\"f.79453F4B27E5A85BA3A0593F38E1EFD7.d.251EC070DD075B9520588D413DE7BFB3.e.8\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"b78a629dcf9485e507716ce76670ff4c\", element=\"f.79453F4B27E5A85BA3A0593F38E1EFD7.d.251EC070DD075B9520588D413DE7BFB3.e.9\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"b78a629dcf9485e507716ce76670ff4c\", element=\"f.79453F4B27E5A85BA3A0593F38E1EFD7.d.251EC070DD075B9520588D413DE7BFB3.e.10\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"b78a629dcf9485e507716ce76670ff4c\", element=\"f.79453F4B27E5A85BA3A0593F38E1EFD7.d.251EC070DD075B9520588D413DE7BFB3.e.11\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"b78a629dcf9485e507716ce76670ff4c\", element=\"f.79453F4B27E5A85BA3A0593F38E1EFD7.d.251EC070DD075B9520588D413DE7BFB3.e.12\")>]\n",
       "Python <class 'selenium.webdriver.remote.webelement.WebElement'>\n",
       "PSF <class 'selenium.webdriver.remote.webelement.WebElement'>\n",
       "Docs <class 'selenium.webdriver.remote.webelement.WebElement'>\n",
@@ -166,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +346,7 @@
     "time.sleep(5)\n",
     "\n",
     "#검색된 결과 중에서 a tag 가져오기 <a class='lnk_tit'>\n",
-    "a_tags = driver.find_elements(By.CSS_SELECTOR,'a.lnk_tit')\n",
+    "a_tags = driver.find_elements(By.CSS_SELECTOR,'ul.lst_type li a.lnk_head')\n",
     "if a_tags:\n",
     "    #첫번째 a tag 선택하고, click() 함수 호출\n",
     "    a_tags[0].click()\n",
@@ -251,18 +376,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "login_ok True\n",
-      "'WebDriver' object has no attribute 'find_elements_by_name'\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "#env에 저장해야 함, 근데 로그인할 때 검증 코드 요구하면 안됨..\n",
+    "GIT_USERNAME = os.getenv(\"GIT_USERNAME\")\n",
+    "print(GIT_USERNAME[:4])\n",
+    "\n",
+    "GIT_PASSWORD = os.getenv(\"GIT_PASSWORD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -381,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -395,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
