--- a/08.Selenium사용_Image_download.ipynb
+++ b/08.Selenium사용_Image_download.ipynb
@@ -28,10 +28,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "338a034e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이미지 개수: 15\n",
+      "Saving... unsplash_cat\\cat_1.jpg\n",
+      "Saving... unsplash_cat\\cat_2.jpg\n",
+      "Saving... unsplash_cat\\cat_3.jpg\n",
+      "Saving... unsplash_cat\\cat_4.jpg\n",
+      "Saving... unsplash_cat\\cat_5.jpg\n",
+      "Saving... unsplash_cat\\cat_6.jpg\n",
+      "Saving... unsplash_cat\\cat_7.jpg\n",
+      "Saving... unsplash_cat\\cat_8.jpg\n",
+      "Saving... unsplash_cat\\cat_9.jpg\n",
+      "Saving... unsplash_cat\\cat_10.jpg\n",
+      "Saving... unsplash_cat\\cat_11.jpg\n",
+      "Saving... unsplash_cat\\cat_12.jpg\n",
+      "Saving... unsplash_cat\\cat_13.jpg\n",
+      "Saving... unsplash_cat\\cat_14.jpg\n",
+      "Saving... unsplash_cat\\cat_15.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -44,9 +67,9 @@
     "\n",
     "# Chrome 설정\n",
     "options = webdriver.ChromeOptions()\n",
-    "options.add_argument('--headless')  # 창 안띄우기\n",
-    "options.add_argument('--no-sandbox')\n",
-    "options.add_argument('--disable-dev-shm-usage')\n",
+    "# options.add_argument('--headless')  # 창 안띄우기\n",
+    "# options.add_argument('--no-sandbox')\n",
+    "# options.add_argument('--disable-dev-shm-usage')\n",
     "\n",
     "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
     "\n",
@@ -91,10 +114,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2575805f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "img 태그 개수: 252\n",
+      "수집 이미지 개수: 79\n",
+      "Saving... google_img_cat\\cat_1.jpg\n",
+      "Saving... google_img_cat\\cat_2.jpg\n",
+      "Saving... google_img_cat\\cat_3.jpg\n",
+      "Saving... google_img_cat\\cat_4.jpg\n",
+      "Saving... google_img_cat\\cat_5.jpg\n",
+      "Saving... google_img_cat\\cat_6.jpg\n",
+      "Saving... google_img_cat\\cat_7.jpg\n",
+      "Saving... google_img_cat\\cat_8.jpg\n",
+      "Saving... google_img_cat\\cat_9.jpg\n",
+      "Saving... google_img_cat\\cat_10.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "# 필요한 라이브러리 import\n",
     "from selenium import webdriver  # 브라우저 자동화 도구\n",
@@ -174,10 +216,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "18822c54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 이미지 개수: 253\n",
+      "수집된 이미지 URL 개수: 76\n",
+      "Saving... google_img_강아지\\강아지_1.jpg\n",
+      "Saving... google_img_강아지\\강아지_2.jpg\n",
+      "Saving... google_img_강아지\\강아지_3.jpg\n",
+      "Saving... google_img_강아지\\강아지_4.jpg\n",
+      "Saving... google_img_강아지\\강아지_5.jpg\n",
+      "Saving... google_img_강아지\\강아지_6.jpg\n",
+      "Saving... google_img_강아지\\강아지_7.jpg\n",
+      "Saving... google_img_강아지\\강아지_8.jpg\n",
+      "Saving... google_img_강아지\\강아지_9.jpg\n",
+      "Saving... google_img_강아지\\강아지_10.jpg\n",
+      "Saving... google_img_강아지\\강아지_11.jpg\n",
+      "Saving... google_img_강아지\\강아지_12.jpg\n",
+      "Saving... google_img_강아지\\강아지_13.jpg\n",
+      "Saving... google_img_강아지\\강아지_14.jpg\n",
+      "Saving... google_img_강아지\\강아지_15.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -266,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
